Move to templates folder

--- a/templates/epub.yaml
+++ b/templates/epub.yaml
@@ -5,7 +5,7 @@ output-file: ipgo.epub
 epub-cover-image: "content/cover.png"
 
 metadata-files:
-- meta-common.yaml
+- templates/meta-common.yaml
 
 table-of-contents: true
 toc-depth: 2
