--- a/templates/meta-common.yaml
+++ b/templates/meta-common.yaml
@@ -1,6 +1,6 @@
 ---
 title: Introduction to Programming with Go
-subtitle: Learn data structures and algorithms with Go
+subtitle: Learn algorithms and datastructures using golang
 date: "23 September. 2023 (preview)"
 author:
 - Youri Ackx
